<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:gravity="center"
    android:orientation="vertical">

    <ImageView
        android:layout_width="260dp"
        android:layout_height="180dp"
        android:padding="10dp"
        android:paddingBottom="25dp"
        android:contentDescription="@string/logo"
        android:src="@drawable/recipe_book"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:text="@string/opening_Title" />

    <EditText
        android:id="@+id/editTextIngredient"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textAlignment="center"
        android:ems="10"
        android:hint="@string/instructions_main"
        android:autofillHints="@string/instructions_main"
        android:inputType="textCapSentences" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/submit_button"
        android:text="@string/submit_button"/>

</LinearLayout>